# ecp

./: .gitignore  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  package.json  ruff.toml  sitemap.xml
.github/agents/: feature agent.agent.md
.github/workflows/: auto-release.yml  ci.yml  deploy-docs.yml  release.yml  tests.yml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  main.js  styles.css
client/src/components/: EvaluationList.jsx  Header.jsx  Layout.jsx  RunButton.jsx
client/src/pages/: EvaluationDetail.jsx  Home.jsx
client/src/services/: api.js
docs/: ci.md  dev-experience.md  examples.md  index.md  inspector.md  quickstart.md  spec.md  why-ecp.md
docs/overrides/partials/integrations/analytics/: google.html
examples/: index.html
examples/async_python_demo/: agent.py  manifest.yaml
examples/crewai_demo/: agent.py  manifest.yaml
examples/customer_support_demo/: agent.py  manifest.yaml
examples/langchain_demo/: agent.py  manifest.yaml  report.json  test.html
examples/llamaindex_demo/: agent.py  manifest.yaml  report.json
examples/plain_python_demo/: agent.py  manifest.yaml
examples/pydantic_ai_demo/: agent.py  manifest.yaml
examples/streamable_http_demo/: agent.py  manifest.yaml
examples/two_agent_demo/: agent.py  manifest.yaml
javascripts/: gtag.js
quickstart/: index.html
runtime/python/: README.md  pyproject.toml
runtime/python/src/ecp_runtime/: __init__.py  cli.py  conformance.py  graders.py  manifest.py  pytest_plugin.py  reporter.py  runner.py  trend.py
runtime/python/tests/: test_cli.py  test_conformance.py  test_example_integrations.py  test_graders.py  test_manifest.py  test_runner.py  test_trend.py
schema/: agent-result.schema.json  manifest.schema.json  report.schema.json  tool-call.schema.json
sdk/python/: README.md  pyproject.toml
sdk/python/src/ecp/: __init__.py  decorators.py  server.py
sdk/python/src/ecp/adaptors/: __init__.py  crewai.py  langchain.py  llama_index.py  pydantic_ai.py
sdk/python/tests/: test_adapters.py  test_server.py
search/: search_index.json
server/: package-lock.json  package.json
server/src/: auth.js  ecp-client.js  server.js
server/src/routes/: evaluations.js
spec/: index.html  protocol.md
tests/: test_feature_agent_spec.py
