[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecp-sdk"
version = "0.2.9"
description = "The official Python SDK for the Evaluation Context Protocol (ECP)."
authors = [
  { name = "ECP Maintainers", email = "hello@ecp.org" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [] # Zero dependencies! Keep it lightweight.

[project.urls]
Homepage = "https://github.com/evaluation-context-protocol/ecp"
Documentation = "https://evaluationcontextprotocol.io/"
Repository = "https://github.com/evaluation-context-protocol/ecp"
Issues = "https://github.com/evaluation-context-protocol/ecp/issues"

[project.optional-dependencies]
# We will add framework support here later
crewai = ["crewai"]
langchain = ["langchain"]
llamaindex = ["llama-index"]
pydanticai = ["pydantic-ai"]

[tool.hatch.build.targets.wheel]
packages = ["src/ecp"]
