[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecp-sdk"
version = "0.3.3"
description = "Python SDK for portable AI agent evaluations with outputs, tool calls, and audit context."
authors = [
  { name = "ECP Maintainers", email = "aniket.wattamwar17@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [] # Zero dependencies! Keep it lightweight.

[project.urls]
Homepage = "https://github.com/evaluation-context-protocol/ecp"
Documentation = "https://evaluationcontextprotocol.io/"
Repository = "https://github.com/evaluation-context-protocol/ecp"
Issues = "https://github.com/evaluation-context-protocol/ecp/issues"

[project.optional-dependencies]
# We will add framework support here later
crewai = ["crewai"]
langchain = ["langchain"]
llamaindex = ["llama-index"]
pydanticai = ["pydantic-ai"]

[tool.hatch.build.targets.wheel]
packages = ["src/ecp"]

